--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <td><img src="img/portrait2.png" alt="my photo"></td>
       <td>
         <h1>Anton Stakh</h1> <em>QA engeneer in
-          <strong><a href="https://moscow.megafon.ru">MegaFon Corp LLC</a></strong>.</em></p>
+          <strong><a href="https://moscow.megafon.ru">MegaFon</a></strong>.</em></p>
 
-        <p>I am also a web and Python developer. I love coffee and good books.</p>
+        <p>I am also a self-taught web and Python developer. I love coffee and good books.</p>
       </td>
 
     </tr>
@@ -56,7 +56,7 @@
     </tr>
     <tr>
       <td>2021-Now</td>
-      <td>QA- Engeneer at MegaFon Corp LLC</td>
+      <td>QA- Engeneer at MegaFon</td>
     </tr>
   </table>
   <hr>
