Corrected information about education

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
       Faculty of Labor Protection, Ecology,</li>
     <li>Moscow Technological Institute "VTU", in Moscow
       Informatics and computer technology, Software for computer technology and automated systems</li>
+    <li>Synergy Univercity</li>
     <li>The Complete 2022 Web Development Bootcamp
     </li>
     <li>
-      100 Days of Code: The Complete Python Pro Bootcamp for 2022
+      100 Days of Code: The Complete Python Pro Bootcamp 
     </li>
-    <li>Synergy Univercity</li>
+    
   </ul>
   <hr>
   <h3>Work Experience</h3>
