--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ᛏAnton's Personal Site</title>
+  <title>Anton's Personal Site</title>
 </head>
 
 <body>
